--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,2 @@
 PORT=3000
-MONGO_URI=mongodb+srv://<user>:<pass>@mscarrito.fr90b.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb://localhost:27017/local
