--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test:unit": "jest",
     "test:coverage": "jest --coverage",
-    "test:e2e": "echo \"Error: no test specified\" && exit 1"
+    "test:e2e": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +28,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
+    "husky": "^8.0.3",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.0.5",
