--- a/package.json
+++ b/package.json
@@ -7,12 +7,23 @@
     "tsc": "tsc",
     "build": "npx tsc",
     "start": "node dist/app.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/app.js\"",
+    "dev:dist": "concurrently \"npx tsc --watch\" \"nodemon -q dist/app.js\"",
+    "dev": "concurrently \"nodemon\" \"nodemon -x npm run swagger\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test:unit": "jest",
     "test:coverage": "jest --coverage",
     "test:e2e": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "predev": "npm run swagger",
+    "prebuild": "npm run swagger",
+    "swagger": "tsoa spec"
+  },
+  "nodemonConfig": {
+    "watch": [
+      "src"
+    ],
+    "ext": "ts",
+    "exec": "ts-node src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +31,9 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.10",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "concurrently": "^7.6.0",
     "eslint": "^8.36.0",
@@ -32,13 +45,20 @@
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.0.5",
-    "typescript": "^5.0.2"
+    "ts-node": "^10.9.1",
+    "typescript": "~4.7.3"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "method-override": "^3.0.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
-    "ts-node": "^10.9.1"
+    "morgan": "^1.10.0",
+    "swagger-ui-express": "^4.6.2",
+    "tsoa": "^5.0.0-rc.0"
+  },
+  "resolutions": {
+    "@tsoa/cli/typescript": "4.5.5"
   }
 }
