--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,14 +7,16 @@
     "rootDir": "./src",
     "esModuleInterop": true,
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "exclude": [
     "**/*.spec.ts",
-    "**/*.mock.ts",    
+    "**/*.mock.ts",  
   ]
 }
