--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.10",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@types/morgan": "^1.9.4",
     "concurrently": "^7.6.0",
     "eslint": "^8.36.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
@@ -37,8 +38,10 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
+    "morgan": "^1.10.0",
     "ts-node": "^10.9.1"
   }
 }
