--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "/src/app.ts",
   "scripts": {
-    "tsc": "tsc",
+    "start": "vercel dev",
+    "deploy": "vercel deploy --prod",
     "build": "npx tsc",
-    "start": "node dist/app.js",
+    "start:node": "node dist/app.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/app.js\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test:unit": "jest",
@@ -20,9 +21,9 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.10",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
-    "@types/morgan": "^1.9.4",
     "concurrently": "^7.6.0",
     "eslint": "^8.36.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
@@ -42,6 +43,7 @@
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "vercel": "^28.18.3"
   }
 }
