--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-openid-connect": "^2.13.0",
     "helmet": "^6.0.1",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
